# othello

./: .gitignore  Cargo.toml  README.md
.github/workflows/: deploy.yml
othello/: Cargo.toml
othello-ai/: Cargo.toml
othello-ai/src/othello/: game.rs
othello-gui/: Cargo.toml  Trunk.toml  index.html
othello-gui/src/: main.rs
othello/benches/: minimax.rs
othello/src/: lib.rs  main.rs  mcts.rs
othello/src/agents/: mcts.rs  mcts_eval.rs  mcts_mr.rs  minimax.rs  minimax_better_eval.rs  mod.rs  random.rs
othello/src/othello/: game.rs  play.rs
