[package]
name = "othello-gui"
version = "0.1.0"
edition = "2024"

[dependencies]
console_error_panic_hook = "0.1.7"
getrandom = { version = "0.4.2", features = ["wasm_js"] }
gloo-timers = "0.4.0"
othello = { path = "../othello" }
rand = "0.10.1"
sycamore = "0.9.2"
web-sys = { version = "0.3.102", features = ["HtmlSelectElement"] }
